<resources>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="ensure">确定</string>
    <string name="cacel">取消</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="db_name">cloo_orm.db</string>
    <string name="db_version">2</string>
    <string name="common_dialog_title">温馨提示</string>
    <string name="common_loading_msg">加载中，请稍等...</string>
    <string name="confirm_install_hint">安装提示</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装中国移动话付宝安全支付插件，才能进行付款。

点击确定，立即安装。"</string>
    <string name="qihoo_app_name">union</string>
    <string name="qihoo_action_settings">Settings</string>
    <string name="qihoo_title_back">返回</string>
    <string name="qihoo_title">精品推荐</string>
    <string name="qihoo_loading_no_data">哎呀！服务哥翘班啦！</string>
    <string name="qihoo_loading_not_in_union">当前APP尚未纳入联盟</string>
    <string name="qihoo_loading_installed_all">敬请期待更多精品</string>
    <string name="qihoo_loading_no_net"><big>联网失败，点击屏幕刷新</big>"

"<smail>请检查网络设置后重新尝试联网</smail>"

"</string>
    <string name="qihoo_loading">正在获取...</string>
    <string name="qihoo_loading_net_config">网络设置</string>
    <string name="qihoo_download_count">%1$s次下载</string>
    <string name="qihoo_download_10_thousand">%1$1.0f万次下载</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.mob.com</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装易信，需要安装易信才能使用</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装易信，需要安装Line才能使用</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="kaixin">开心网</string>
    <string name="email">邮件</string>
    <string name="shortmessage">信息</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="douban">豆瓣</string>
    <string name="youdao">有道云笔记</string>
    <string name="evernote">印象笔记</string>
    <string name="linkedin">领英</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>
    <string name="yixin">易信</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="mingdao">明道</string>
    <string name="line">Line</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="use_login_button">请改用“登录”按钮</string>
    <string name="apptype">client</string>
    <string name="insertbookid">-1</string>
    <string name="insertbookname">二层楼书院</string>
    <string name="umeng_app_key">549239fdfd98c57c85002954</string>
    <string name="app_name">纯爱小说吧</string>
    <string name="channel">baidu</string>
    <string name="channel_type">1</string>
    <string name="insertbookids" />
    <string name="youmi_channel" />
    <string name="wanpu_channel">default</string>
    <string name="limit_input">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="consume_phone2_tv22">3、在收到“订购成功”的短信后请点击下面按钮查看包月状态，10分钟后状态未更新，可能掉单，请联系客服。</string>
    <string name="consume_phone2_tv3">"温馨提示：
1.目前暂不支持中国移动大众卡用户使用本方式。手机号码仅用作订购服务，请放心填写。
2.目前xx网手机订购包月阅读服务是通过搜狐公司提供的“焦点新闻”服务来获得的，资费15/月（不含通讯费）。
3.每个月的服务时间按自然月计算。例如：您在3月15日开通服务，服务只享受到月底，即3月31日。
4.服务到期后，次月1日，如您不进行退订，服务可继续使用，并将自动扣除下月费用。
5.根据运营商等合作伙伴要求，每月我们将向您下发来自发送号码：10666666不多于15条短信产品信息，其内容为优秀的作品推荐和新闻资讯。（注：您接收到的信息将不再收取任何费用），成功接收全部信息是正常使用您在所定制服务的必要条件。请保持手机畅通且能正常接收短信。"</string>
    <string name="person_center_frendly">一键绑定手机号，方便您找回用户名和密码。</string>
    <string name="bind_phone_confirm_msg">"点击确定按钮，直接绑定！
请放心绑定，xx网不会把您的手机号泄漏给任何第三方。
海外用户暂不支持此服务。"</string>
    <string name="unbind_phone_confirm_msg">点击确定按钮，解除绑定！</string>
    <string name="forget_password_confirm_msg">点击确定按钮，找回密码！</string>
    <string name="updateInfo_frendly">"友情提醒：
请输入正确的手机号和邮箱号，如果忘记密码，将以任意一个作为凭证找回。
手机号码仅用来找回密码，不会为您绑定任何服务，不会泄露您的手机号，请放心填写。"</string>
    <string name="forget_password_content_bottom_tv">%s。</string>
    <string name="forget_password_msg">请使用您绑定的手机编辑短信“&lt;font color=#ff6600>xxxx#mm&lt;/font>”发送到 &lt;font color=#ff6600>12114&lt;/font>，根据短信提示便可重设密码。本手机找回密码，请点击下面按钮直接找回。</string>
    <string name="reg_confirm">"点击确定按钮，马上注册！
请放心注册，xx网不会把您的手机号泄漏给任何第三方。
海外用户暂不支持短信注册，请手动直接注册。"</string>
    <string name="person_center_bottom_unbind_tv">注：1、您已绑定了手机号%s，随时可用已绑定的手机发短信“&lt;font color=#ff6600>xx阅读#mm&lt;/font>”到 &lt;font color=#ff6600>12114&lt;/font>，根据提示重设密码。&lt;br/> 2、如果您需要更换新的绑定号码，请先&lt;font color=#0066CC>&lt;U>点这里解除绑定&lt;/U>&lt;/font>，然后再用新号码重新绑定。</string>
    <string name="unbind_phone_msg">请使用您绑定的手机编辑短信“&lt;font color=#ff6600>xx阅读#jb&lt;/font>”发送到&lt;font color=#ff6600>12114&lt;/font>，便可解除绑定！本手机解绑，请点击下面按钮直接解除。</string>
    <string name="forget_password_personcenter_modify_bind_tv">您已绑定了手机号%s，随时可用已绑定的手机发短信“&lt;font color=#ff6600>xxxx#mm&lt;/font>”到&lt;font color=#ff6600>12114&lt;/font>，根据提示重设密码。</string>
    <string name="forget_password_personcenter_modify_unbind_tv">注：1、绑定手机号不需要任何费用，您只需要支付由运营商收取的标准短信费。 &lt;br/> 2、手机号仅用于您找回用户名和密码，小说阅读网不会透露给任何第三方。 &lt;br/> 3、海外手机用户暂不支持此服务。&lt;br/></string>
    <string name="network_err">网络不给力，请检查网络</string>
    <string name="vip_reading_err">章节内容没下载，请联网后阅读！</string>
    <string name="login">登录</string>
    <string name="login_hint">请选择以下方式进行登录</string>
    <string name="auth_site_mode">授权页面方式</string>
    <string name="sso_mode">SSO方式</string>
    <string name="password_flow_mode">用户名密码方式</string>
    <string name="upload_photo">上传照片</string>
    <string name="logout">登出</string>
    <string name="view_log">查看Log</string>
    <string name="user_info_group">用户信息</string>
    <string name="logined_user_info">登录用户信息</string>
    <string name="logined_user_info_api">getCurrentUserInfo</string>
    <string name="albums_info">相册信息</string>
    <string name="albums_info_api">getAlbums</string>
    <string name="users_getinfo">获取指定uid用户信息</string>
    <string name="users_getinfo_api">users.getInfo</string>
    <string name="friends_get">获取当前用户好友uid列表</string>
    <string name="friends_get_api">friends.get</string>
    <string name="friends_get_friends">获取当前用户好友列表</string>
    <string name="friends_get_friends_api">friends.getFriends</string>
    <string name="publish_group">发布内容</string>
    <string name="publish_status">状态</string>
    <string name="publish_status_api">publishStatus</string>
    <string name="publish_feed">新鲜事</string>
    <string name="publish_feed_api">publishFeed</string>
    <string name="publish_photo">照片</string>
    <string name="publish_photo_api">uploadPhoto</string>
    <string name="create_album">新建相册</string>
    <string name="create_album_api">createAlbum</string>
    <string name="one_click_publish_group">一键发布</string>
    <string name="one_click_status">状态</string>
    <string name="one_click_status_api">publishStatus</string>
    <string name="one_click_photo">照片</string>
    <string name="one_click_photo_api">publishPhoto</string>
    <string name="one_click_album">新建相册</string>
    <string name="one_click_album_api">createAlbum</string>
    <string name="dialog_group">Dialog</string>
    <string name="dialog_feed">Feed Dialog</string>
    <string name="dialog_feed_api">publishFeed</string>
    <string name="dialog_status">Status Dialog</string>
    <string name="dialog_status_api">publishStatus</string>
    <string name="bookshelf">书架</string>
    <string name="bookcity">书城</string>
    <string name="usercenter">账户</string>
    <string name="discover">发现</string>
    <string name="booksearch">搜索</string>
    <string name="bookshelf_ordered">我的订阅</string>
    <string name="bookshelf_fence">我的分册</string>
    <string name="bookshelf_synchronized">同步书架</string>
    <string name="arrange_bookshelf_title">整理书架</string>
    <string name="mulu_book_mulu">目录</string>
    <string name="mulu_bookmark">书签</string>
    <string name="mulu_author">作者：</string>
    <string name="mulu_status">状态：</string>
    <string name="mulu_clear">清除</string>
    <string name="mulu_not_mark">本书暂无书签!</string>
    <string name="i_have_read">我已阅读</string>
    <string name="pravicy">《隐私和服务条款》</string>
    <string name="zhanghao_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="confirm_password_hint">确认密码</string>
    <string name="phone_number_hint">手机号码：很重要，用于找回账号密码</string>
    <string name="regist_submit">提交</string>
    <string name="read_setting">设置</string>
    <string name="read_night">夜间</string>
    <string name="read_dashang">打赏</string>
    <string name="read_more">更多</string>
    <string name="go_book_detailed">查看书籍详情</string>
    <string name="down_all_chapters">下载全部可读章节</string>
    <string name="order_all_chapters">订阅全部可读章节</string>
    <string name="pinglun_interaction">评论互动</string>
    <string name="auto_order">自动订阅</string>
    <string name="share_title">分享到(每日分享到朋友圈，送20书券)</string>
    <string name="sina">新浪微博</string>
    <string name="qqzone">QQ空间</string>
    <string name="wechatpengyouquan">微信朋友圈</string>
    <string name="wechatsession">微信好友</string>
</resources>