<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="@color/black_text" android:gravity="center" android:id="@id/btn_dingyue" android:background="@drawable/bookshelf_more_button_top_bg" android:paddingLeft="40.0dip" android:paddingTop="15.0dip" android:paddingRight="40.0dip" android:paddingBottom="10.0dip" android:layout_width="140.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/bookshelf_ordered" />
    <TextView android:textSize="14.0sp" android:textColor="@color/black_text" android:gravity="center" android:id="@id/btn_fence" android:background="@drawable/bookshelf_more_button_top_bg" android:paddingLeft="40.0dip" android:paddingTop="10.0dip" android:paddingRight="40.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="140.0dip" android:layout_height="wrap_content" android:text="@string/bookshelf_fence" />
    <TextView android:textSize="14.0sp" android:textColor="@color/black_text" android:gravity="center" android:id="@id/btn_arrange" android:background="@drawable/bookshelf_more_button_top_bg" android:paddingLeft="40.0dip" android:paddingTop="10.0dip" android:paddingRight="40.0dip" android:paddingBottom="10.0dip" android:layout_width="140.0dip" android:layout_height="wrap_content" android:text="@string/arrange_bookshelf_title" />
    <TextView android:textSize="14.0sp" android:textColor="@color/black_text" android:gravity="center" android:id="@id/btn_tongbu" android:background="@drawable/bookshelf_more_button_bottom_bg" android:paddingLeft="5.0dip" android:paddingTop="10.0dip" android:paddingRight="5.0dip" android:paddingBottom="10.0dip" android:layout_width="140.0dip" android:layout_height="wrap_content" android:text="@string/bookshelf_synchronized" />
</LinearLayout>