<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/mululayout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/top_bar" android:background="@drawable/title_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include layout="@layout/include_top_bfbar" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/show1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/top_bar">
        <LinearLayout android:gravity="center" android:id="@id/linearLayout1" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="27.0dip">
            <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:gravity="center" android:id="@id/novel_item_detail_title" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:id="@id/linearLayout2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_below="@id/linearLayout1">
            <TextView android:textSize="14.0sp" android:textColor="#ff6e6e6e" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mulu_author" />
            <TextView android:textSize="14.0sp" android:textColor="#ff6e6e6e" android:id="@id/novel_sbxxy_mulu_author" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="14.0sp" android:textColor="#ff6e6e6e" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/mulu_status" />
            <TextView android:textSize="14.0sp" android:textColor="#ff6e6e6e" android:id="@id/novel_sbxxy_mulu_status" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/mulu_group_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioGroup android:orientation="horizontal" android:id="@id/mulu_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RadioButton android:textSize="20.0sp" android:textColor="@color/gray_text" android:gravity="center" android:id="@id/novel_mulu" android:background="@drawable/tab_button_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/mulu_book_mulu" android:layout_weight="1.0" />
                <RadioButton android:textSize="20.0sp" android:textColor="@color/gray_text" android:gravity="center" android:id="@id/novel_shuqian" android:background="@drawable/tab_button_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="@string/mulu_bookmark" android:layout_weight="1.0" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout android:id="@id/mulu_list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/mulu_group_layout">
            <ListView android:id="@id/novel_sbxxy_mulu_lv" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:cacheColorHint="#00000000" android:divider="@drawable/xuxian" android:layout_weight="1.0" />
        </LinearLayout>
        <RelativeLayout android:id="@id/show2" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/mulu_group_layout">
            <RelativeLayout android:id="@id/rl2" android:background="@drawable/title_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
                <Button android:textColor="#ffffffff" android:id="@id/bookmark_cancle" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/mulu_clear" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/relativeLayout1" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="8.0dip" android:layout_marginBottom="14.0dip" android:layout_above="@id/rl2">
                <ListView android:id="@id/bookmark_list" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:cacheColorHint="#00000000" android:divider="@null" />
                <TextView android:textSize="24.0sp" android:textColor="#ffcccccc" android:id="@id/bmtx" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/mulu_not_mark" android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>